--- a/Aquarium/Properties/Resources.resx
+++ b/Aquarium/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Fish" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fish.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FishRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fish_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Seaweed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\seaweed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
